packages/jsii/test/negatives/neg.struct-hint-on-enum.ts
/**
 * Attempting to tag an enum as a struct.
 *
 * @struct
 */
export enum EnumName { A, B }
